@startuml

class client{

}

class Video{
String title
String description
int length

String getName()
String getDescription()
int getLength()
}

class Channel{
    String name
    List<ChannelSubscriber> subscribers
    addSubscriber(ChannelSubscriber s)
    upload(Video video);
}
class ChannelSubscriber{
    String name
    String getName()
}
client ..> Video:create
client ..> ChannelSubscriber: create
client ..> Channel: create
Channel *..> ChannelSubscriber
ChannelSubscriber ..> Video
@enduml